--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -267,7 +267,7 @@
         listItem.appendChild(div);
         div.appendChild(headline);
         div.appendChild(small);
-        entry.appendChild(span);
+        listItem.appendChild(span);
 
         productList.appendChild(listItem);
     }
