--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -1,7 +1,8 @@
-﻿@{
+﻿@model IEnumerable<Database.Models.Customer>;
+
+@{
     ViewData["Title"] = "Customers";
 }
-
 
 <ul class="nav nav-tabs nav-tabs">
     <li class="nav-item">
@@ -53,62 +54,66 @@
             <thead>
                 <tr>
                     <th>
-                        Customer#
+                        @Html.DisplayNameFor(model => model.Id)
                     </th>
                     <th>
-                        First Name
+                        @Html.DisplayNameFor(model => model.FirstName)
                     </th>
                     <th>
-                        Last Name
+                        @Html.DisplayNameFor(model => model.LastName)
                     </th>
                     <th></th>
                 </tr>
             </thead>
             <tbody class="tableSearch">
-                <tr>
-                    <td>
-                        ID
-                    </td>
-                    <td>
-                        First Name
-                    </td>
-                    <td>
-                        Last Name
-                    </td>
-                    <td>
-                        @*column with the buttons*@
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            @*---------------------------------------------------------------------------------*@
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @item.Id
+                        </td>
+                        <td>
+                            @item.FirstName
+                        </td>
+                        <td>
+                            @item.LastName
+                        </td>
+                        <td>
+                            @*column with the buttons*@
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                @*---------------------------------------------------------------------------------*@
 
-                            <!-- INFO Button trigger modal -->
-                            <span data-toggle="tooltip" data-placement="bottom" title="info">
-                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
-                                    <i class="fas fa-info-circle"></i>
-                                </button>
-                            </span>
-                            <!-- EDIT: Button trigger modal -->
-                            <span data-toggle="tooltip" data-placement="bottom" title="edit">
-                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" style="background-color:transparent">
-                                    <i class="far fa-edit"></i>
-                                </button>
-                            </span>
-                            @*---------------------------------------------------------------------------------*@
-                            <!-- DELETE Button trigger modal -->
-                            <span data-toggle="tooltip" data-placement="bottom" title="delete">
-                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
-                                    <i class="far fa-trash-alt"></i>
-                                </button>
-                            </span>
+                                <!-- INFO Button trigger modal -->
+                                <span data-toggle="tooltip" data-placement="bottom" title="info">
+                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
+                                        <i class="fas fa-info-circle"></i>
+                                    </button>
+                                </span>
+                                <!-- EDIT: Button trigger modal -->
+                                <span data-toggle="tooltip" data-placement="bottom" title="edit">
+                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" style="background-color:transparent">
+                                        <i class="far fa-edit"></i>
+                                    </button>
+                                </span>
+                                @*---------------------------------------------------------------------------------*@
+                                <!-- DELETE Button trigger modal -->
+                                <span data-toggle="tooltip" data-placement="bottom" title="delete">
+                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
+                                        <i class="far fa-trash-alt"></i>
+                                    </button>
+                                </span>
 
-                            @*---------------------------------------------------------------------------------*@
-                            @*Order history detail button*@
-                        <span data-toggle="tooltip" data-placement="bottom" title="order history">
-                            <a class="btn btn-light" style="background-color:transparent" asp-action="Admin_customerOrderHistory" asp-controller="profile">
-                                <i class="fas fa-history"></i>
-                            </a>
-                        </span>
-                        </div>
-                    </td>
+                                @*---------------------------------------------------------------------------------*@
+                                @*Order history detail button*@
+                                <span data-toggle="tooltip" data-placement="bottom" title="order history">
+                                    <a class="btn btn-light" style="background-color:transparent" asp-action="Admin_customerOrderHistory" asp-controller="profile">
+                                        <i class="fas fa-history"></i>
+                                    </a>
+                                </span>
+                            </div>
+                        </td>
+                    </tr>
+                }
             </tbody>
         </table>
     </div>
@@ -192,7 +197,7 @@
         <div class="DeckelModal modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Edit customer info</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" >
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
