--- a/Deckel-Shop/Views/Stock/Index.cshtml
+++ b/Deckel-Shop/Views/Stock/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-
+﻿@model IEnumerable<Database.Models.Product>;
 
 @*nav bar*@
 <ul class="nav nav-tabs nav-tabs">
@@ -71,7 +68,7 @@
             <thead>
                 <tr>
                     <th scope="col">PRODUCT#</th>
-                    <th scope="col">IMAGE</th>
+                    @*<th scope="col">IMAGE</th>*@
                     <th scope="col">PRODUCT NAME</th>
                     <th scope="col">AMOUNT</th>
                     <th scope="col">PRICE</th>
@@ -79,35 +76,46 @@
                 </tr>
             </thead>
             <tbody class="tableSearch">
-                @*
-                    foreach loop för att loopa igenom listan me stock ???*@
-                <tr>
-                    <th scope="row">1</th>
+                @foreach (var p in Model)
+                {
+                    <tr>
+                        @*<th scope="row"></th>*@
 
-                    <td>
-                        <img src="" class="img-fluid img-thumbnail" alt="aubergineHatt">
-                    </td>
-                    <td>auberginehatt</td>
-                    <td>50 </td>
-                    <td>79 </td>
-                    <td>
-                        <span data-toggle="tooltip" data-placement="bottom" title="info">
-                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
-                                <i class="fas fa-info-circle"></i>
-                            </button>
-                        </span>
-                        <span data-toggle="tooltip" data-placement="bottom" title="edit">
-                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
-                                <i class="far fa-edit"></i>
-                            </button>
-                        </span>
-                        <span data-toggle="tooltip" data-placement="bottom" title="delete">
-                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
-                                <i class="far fa-trash-alt"></i>
-                            </button>
-                        </span>
-                    </td>
-                </tr>
+                        @*<td>
+                                <img src="" class="img-fluid img-thumbnail" alt="aubergineHatt">
+                            </td>*@
+                        <td>
+                            @p.Id
+                        </td>
+                        <td>
+                            @p.Name
+                        </td>
+                        <td>
+                            @p.Amount
+                        </td>
+                        <td>
+                            @p.Price
+                        </td>
+                        <td>
+                            <span data-toggle="tooltip" data-placement="bottom" title="info">
+                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
+                                    <i class="fas fa-info-circle"></i>
+                                </button>
+                            </span>
+                            <span data-toggle="tooltip" data-placement="bottom" title="edit">
+                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
+                                    <i class="far fa-edit"></i>
+                                </button>
+                            </span>
+                            <span data-toggle="tooltip" data-placement="bottom" title="delete">
+                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
+                                    <i class="far fa-trash-alt"></i>
+                                </button>
+                            </span>
+                        </td>
+                    </tr>
+
+                }
 
             </tbody>
         </table>
@@ -190,8 +198,9 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="DeckelModal modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Customer info</h5>                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                <h5 class="modal-title" id="exampleModalLabel">Customer info</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                <span aria-hidden="true">&times;</span>
             </div>
             <div class="modal-body">
                 <form>
