--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model IEnumerable<Database.Models.Customer>
+
+
+@{
     ViewData["Title"] = "Customers";
 }
 
@@ -18,11 +21,32 @@
     </li>
 </ul>
 
+
+
+
+@using (Html.BeginForm("Admin_customerList", "Profile", FormMethod.Get))
+{
+    <b>Search Option:</b><br />
+
+    <p>ID</p> @Html.RadioButton("option", "Id") 
+    <p>FirstName</p> @Html.RadioButton("option", "FirstName") 
+    <p>LastName</p>  @Html.RadioButton("option", "LastName") 
+
+    <p>Subject</p>@Html.TextBox("search")
+    
+    <input type="submit" name="submit" value="Search" />
+    <input type="button" value="Clear" onclick="location.href='@Url.Action("Admin_customerList", "Profile")'" />
+   
+}
+
+
+
+
 @*search bar*@
 <div class="row mt-3 pt-3 mb-3">
     <div class="col-sm-4">
         <div class="input-group">
-            <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc" id="tableSearch">
+            <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc" id="tableSearch" >
             <div class="input-group-append">
                 <button class="input-group-text"><i class="fa fa-search"></i></button>
             </div>
@@ -64,52 +88,62 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody class="tableSearch">
-                <tr>
-                    <td>
-                        ID
-                    </td>
-                    <td>
-                        First Name
-                    </td>
-                    <td>
-                        Last Name
-                    </td>
-                    <td>
-                        @*column with the buttons*@
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            @*---------------------------------------------------------------------------------*@
 
-                            <!-- INFO Button trigger modal -->
-                            <span data-toggle="tooltip" data-placement="bottom" title="info">
-                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
-                                    <i class="fas fa-info-circle"></i>
-                                </button>
-                            </span>
-                            <!-- EDIT: Button trigger modal -->
-                            <span data-toggle="tooltip" data-placement="bottom" title="edit">
-                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" style="background-color:transparent">
-                                    <i class="far fa-edit"></i>
-                                </button>
-                            </span>
-                            @*---------------------------------------------------------------------------------*@
-                            <!-- DELETE Button trigger modal -->
-                            <span data-toggle="tooltip" data-placement="bottom" title="delete">
-                                <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
-                                    <i class="far fa-trash-alt"></i>
-                                </button>
-                            </span>
 
-                            @*---------------------------------------------------------------------------------*@
-                            @*Order history detail button*@
-                        <span data-toggle="tooltip" data-placement="bottom" title="order history">
-                            <a class="btn btn-light" style="background-color:transparent" asp-action="Admin_customerOrderHistory" asp-controller="profile">
-                                <i class="fas fa-history"></i>
-                            </a>
-                        </span>
-                        </div>
-                    </td>
-            </tbody>
+
+
+
+            @foreach (var item in Model)
+            {
+                <tbody class="tableSearch">
+                    <tr>
+
+                        <td>
+                            @item.Id
+                        </td>
+                        <td>
+                            @item.FirstName
+                        </td>
+                        <td>
+                            @item.LastName
+                        </td>
+                        <td>
+                            @*column with the buttons*@
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                @*---------------------------------------------------------------------------------*@
+
+                                <!-- INFO Button trigger modal -->
+                                <span data-toggle="tooltip" data-placement="bottom" title="info">
+                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
+                                        <i class="fas fa-info-circle"></i>
+                                    </button>
+                                </span>
+                                <!-- EDIT: Button trigger modal -->
+                                <span data-toggle="tooltip" data-placement="bottom" title="edit">
+                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal" style="background-color:transparent">
+                                        <i class="far fa-edit"></i>
+                                    </button>
+                                </span>
+                                @*---------------------------------------------------------------------------------*@
+                                <!-- DELETE Button trigger modal -->
+                                <span data-toggle="tooltip" data-placement="bottom" title="delete">
+                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
+                                        <i class="far fa-trash-alt"></i>
+                                    </button>
+                                </span>
+
+                                @*---------------------------------------------------------------------------------*@
+                                @*Order history detail button*@
+                                <span data-toggle="tooltip" data-placement="bottom" title="order history">
+                                    <a class="btn btn-light" style="background-color:transparent" asp-action="Admin_customerOrderHistory" asp-controller="profile">
+                                        <i class="fas fa-history"></i>
+                                    </a>
+                                </span>
+                            </div>
+                        </td>
+
+                </tbody>
+            }
         </table>
     </div>
 </div>
@@ -192,7 +226,7 @@
         <div class="DeckelModal modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Edit customer info</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" >
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
