Fixed button for administrator index

--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -110,6 +110,11 @@
                                 <i class="far fa-trash-alt"></i>
                             </button>
                         </span>
+                        <span data-toggle="tooltip" data-placement="bottom" title="edit">
+                            <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-editOrder" style="background-color:transparent">
+                                <i class="fas fa-truck-loading"></i>
+                            </button>
+                        </span>
                     </td>
                 </tr>
                 }
