product view linked to database

--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -1,16 +1,16 @@
-﻿@model List<Cap>
+﻿@model IEnumerable<Database.Models.Product>
 
 <h3 class="h3">Popular Propeller Caps</h3>
 <div class="row">
 
     @foreach (var p in Model)
     {
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-3 col-sm-6 pb-8">
             <div class="product-grid4">
                 <div class="product-image4">
                     <a href="#">
-                        <img class="pic-1" src="/Image/Model1v1.jpg">
-                        <img class="pic-2" src="/Image/Model1v2.jpg">
+                        <img class="pic-1" src="@p.ImgName">
+                        @*<img class="pic-2" src="/Image/Model1v2.jpg">*@
                     </a>
                     <ul class="social">
                         <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
@@ -19,7 +19,7 @@
                     <span class="product-new-label">Hot</span>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">@p.ProductName</a></h3>
+                    <h3 class="title"><a href="#">@p.Name</a></h3>
                     <div class="price">
                         @p.Price SEK
                     </div>
