La till så att produkterna på products kan visa två bilder per produkt (fixat med databasen med fil finns på discord)

--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -10,7 +10,7 @@
                 <div class="product-image4">
                     <a href="#">
                         <img class="pic-1" src="@p.ImgName">
-                        @*<img class="pic-2" src="/Image/Model1v2.jpg">*@
+                        <img class="pic-2" src="@p.ImgName2">
                     </a>
                     <ul class="social">
                         <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
