Added visual buttons to checkout

--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -110,7 +110,7 @@
                                 <i class="far fa-trash-alt"></i>
                             </button>
                         </span>
-                        <span data-toggle="tooltip" data-placement="bottom" title="edit">
+                        <span data-toggle="tooltip" data-placement="bottom" title="deliver">
                             <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-editOrder" style="background-color:transparent">
                                 <i class="fas fa-truck-loading"></i>
                             </button>
