--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Customer#01 Order History";
 }
 <div class="row">
-    <h1>Customer #001 order history</h1>
+    @*add customer id*@
+    <h1>Order history</h1>
 </div>
 @*-------------------------------------------------------------------------*@
 @*search bar*@
