Can now get all product info to a view through api

--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
 }
-@model IEnumerable<Deckel_Shop.Models.Customer>
+@model IEnumerable<Deckel_Shop.Models.Customer2>
 
 @*nav bar*@
 <ul class="nav nav-tabs nav-tabs">
