--- a/Deckel-Shop/Views/Profile/Administrator/AddCustomer.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/AddCustomer.cshtml
@@ -1,5 +1,72 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@*<div class="modal fade" id="exampleModal-customer" tabindex="-1" aria-labelledby="exampleModalcustomer-Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="DeckelModal modal-content">
+            <div class="modal-header">*@
+<h5 class="modal-title" id="exampleModalLabel">New customer</h5>
+@*<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>*@
+@*</div>
+    <div class="modal-body">*@
+<form asp-action="Create">
+    @*start of form*@
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputCustomerID">Customer ID</label>
+            <input type="text" class="form-control" id="inputCustomerID" disabled>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputFirstName">First Name</label>
+            <input type="text" class="form-control" id="inputFirstName">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="inputLastName">Last Name</label>
+            <input type="text" class="form-control" id="inputLastName">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input type="email" class="form-control" id="inputEmail4">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="inputPassword4">Password</label>
+            <input type="password" class="form-control" id="inputPassword4">
+            <input type="checkbox" onclick="myFunction()"> Show Password
+            @*TODO: js needed*@
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputAddress">Address</label>
+        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputCity">City</label>
+            <input type="text" class="form-control" id="inputCity">
+        </div>
+        <div class="form-group col-md-4">
+            <label for="inputState">State</label>
+            <input type="text" class="form-control" id="inputState">
+        </div>
+        <div class="form-group col-md-2">
+            <label for="inputZip">Zip</label>
+            <input type="text" class="form-control" id="inputZip">
+        </div>
+    </div>
+    @*end of form*@
+</form>
+@*</div>*@
+<div class="modal-footer">
+    <form method="post">
+        <input type="submit" value="AddCustomer" class="btn btn-primary" />
+        <input type="button"  class="btn btn-danger" />
+    </form>
+    @*<button type="button" class="btn btn-primary">Create</button>
+    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>*@
+</div>
+@*</div>
+        </div>
+    </div>*@
