--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -34,10 +34,20 @@
     @*---------------------------------------------------------------------------------*@
     <!-- NEW: Button trigger modal -->
     <div class="col-sm-8 text-right">
-        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
-            <i class="far fa-plus-square"></i> Add customer
-        </button>
+        <form method="post">
+            <span data-toggle="tooltip" title="order history">
+                <button class="btn btn-light" style="background-color:transparent" asp-action="AddCustomer">
+                    <i class="far fa-plus-square"></i> Add customer
+                </button>
+            </span>
+        </form>
     </div>
+
+    @*<div class="col-sm-8 text-right">
+            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
+                <i class="far fa-plus-square"></i> Add customer
+            </button>
+        </div>*@
 </div>
 
 
@@ -108,14 +118,14 @@
                                 @*<span data-toggle="tooltip" data-placement="bottom" title="order history" class="btn btn-light" style="background-color:transparent">*@
                                 @*@Html.ActionLink("Order History", "Admin_customerOrderHistory", new { id = item.Id })*@
 
-                            <form method="post">
-                                <span data-toggle="tooltip" title="order history">
-                                    <button class="btn btn-light" style="background-color:transparent" asp-action="Admin_customerOrderHistory" value="@item.Id" name="id">
-                                        <i class="fas fa-history"></i>
-                                    </button>
-                                </span>
-                            </form>
-                                
+                                <form method="post">
+                                    <span data-toggle="tooltip" title="order history">
+                                        <button class="btn btn-light" style="background-color:transparent" asp-action="Admin_customerOrderHistory" value="@item.Id" name="id">
+                                            <i class="fas fa-history"></i>
+                                        </button>
+                                    </span>
+                                </form>
+
                             </div>
                         </td>
                     </tr>
