--- a/Deckel-Shop/Views/Profile/Administrator/CustomerInfo.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/CustomerInfo.cshtml
@@ -1,5 +1,73 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model Database.Models.Customer
+
+@*<div class="modal fade" id="exampleModal-details" tabindex="-1" aria-labelledby="exampleModal-detailsLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="DeckelModal modal-content">
+            <div class="modal-header">*@
+<h5 class="modal-title" id="exampleModalLabel">Customer info</h5>
+@*<button type="button" class="close" data-dismiss="modal" aria-label="Close" />
+    <span aria-hidden="true">&times;</span>*@
+@*</div>
+    <div class="modal-body">*@
+<form id="customerForm">
+    @*start of form*@
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputCustomerID">Customer ID</label>
+            <input type="text" class="form-control" id="inputCustomerID" disabled value="@Model.Id">
+        </div>
+        <div class="col-md-6 text-right">
+            <button type="button" class="btn btn-light" style="background-color:transparent">
+                <i class="far fa-edit"></i>Edit
+            </button>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputFirstName">First Name</label>
+            <input type="text" class="form-control" id="inputFirstName" disabled value="@Model.FirstName">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="inputLastName">Last Name</label>
+            <input type="text" class="form-control" id="inputLastName" disabled value="@Model.LastName">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input type="email" class="form-control" id="inputEmail4" disabled value="@Model.Email">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="inputPassword">Password</label>
+            @*<input type="password" class="form-control inputpassword" id="inputPassword" value="faisalkhan@123" disabled>
+                <input type="checkbox" onclick="showPassword()"> Show Password*@
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputAddress">Address</label>
+        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" disabled value="@Model.Street">
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputCity">City</label>
+            <input type="text" class="form-control" id="inputCity" disabled value="@Model.City">
+        </div>
+        @*<div class="form-group col-md-4">
+            <label for="inputState">State</label>
+            <input type="text" class="form-control" id="inputState" disabled>
+        </div>*@
+        <div class="form-group col-md-2">
+            <label for="inputZip">Zip</label>
+            <input type="text" class="form-control" id="inputZip" disabled value="@Model.ZipCode">
+        </div>
+    </div>
+    @*end of form*@
+</form>
+@*</div>*@
+<div class="modal-footer">
+    <button type="button" class="btn btn-danger">Save changes</button>
+    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+</div>
+@*</div>
+        </div>
+    </div>*@
