--- a/Deckel-Shop/Views/Profile/Administrator/AddProduct.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/AddProduct.cshtml
@@ -1,5 +1,64 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@*<div class="modal fade" id="exampleModal-customer" tabindex="-1" aria-labelledby="exampleModalcustomer-Label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="DeckelModal modal-content">
+            <div class="modal-header">*@
+                <h5 class="modal-title" id="exampleModalLabel">New customer</h5>
+                @*<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>*@
+            @*</div>*@
+            <!--<div class="modal-body">-->
+                <form>
+                    @*start of form*@
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputStockID">Product ID</label>
+                            <input type="text" class="form-control" id="inputCustomerID">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputName">Product Name</label>
+                            <input type="text" class="form-control" id="inputFirstName">
+                        </div>
+                    </div>
+                    <div class="form-row">
+
+
+                        <div class="form-group col-md-6">
+                            <label for="inputAmount">Amount</label>
+                            <input type="text" class="form-control" id="inputLastName">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputPrice">Price</label>
+                            <input type="email" class="form-control" id="inputEmail4">
+                        </div>
+                    </div>
+                    @*uploading image*@
+                    <div>
+                        <label for="inputZip">Image</label>
+                        <div class="container mt-5">
+                            <div class="col-sm-12 col-lg-8 mr-auto ml-auto border p-8">
+                                <form method="post" enctype="multipart/form-data">
+                                    <div class="form-group">
+                                        <label><strong>Upload Files</strong></label>
+                                        <div class="custom-file">
+                                            <input type="file" name="files[]" multiple class="custom-file-input form-control" id="customFile">
+                                            <label class="custom-file-label" for="customFile">Choose file</label>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="button" name="upload" value="upload" id="upload" class="btn btn-block btn-dark"><i class="fa fa-fw fa-upload"></i> Upload</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    @*end of form*@
+                </form>
+            @*</div>*@
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+            </div>
+        @*</div>
+    </div>
+</div>*@
