--- a/Deckel-Shop/Views/Stock/Index.cshtml
+++ b/Deckel-Shop/Views/Stock/Index.cshtml
@@ -30,11 +30,19 @@
 
     @*---------------------------------------------------------------------------------*@
     <!-- NEW: Button trigger modal -->
-    <div class="col-sm-8 text-right">
-        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
+<div class="col-sm-8 text-right">
+    @*<button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
             <i class="far fa-plus-square"></i> Add product
-        </button>
-    </div>
+        </button>*@
+
+    <form method="post">
+        
+            <button class="btn btn-light" style="background-color:transparent" asp-action="AddProduct" asp-controller="Product">
+                <i class="far fa-plus-square"></i> Add product
+            </button>
+       
+    </form>
+</div>
 </div>
 
 @*<div class="ml-auto my-2 col-lg-4 mt-3 pt-3 mb-3">
