--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -87,30 +87,33 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model)
+                @if (Model !=null)
                 {
-                    <tr>
-                        <th scope="row">@Html.DisplayFor(modelItem => item.Id)</th>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <th scope="row">@Html.DisplayFor(modelItem => item.Id)</th>
 
-                        <td>@Html.DisplayFor(modelItem => item.Date)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Amount)</td>
-                        <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
-                        <td>
-                            <span data-toggle="tooltip" data-placement="bottom" title="info">
-                                <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
-                                    <i class="fas fa-info-circle"></i>
-                                </button>
-                            </span>
-                            <span data-toggle="tooltip" data-placement="bottom" title="delete">
-                                <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
-                                    <i class="far fa-trash-alt"></i>
-                                </button>
-                            </span>
-                        </td>
-                    </tr>
+                            <td>@Html.DisplayFor(modelItem => item.Date)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Amount)</td>
+                            <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
+                            <td>
+                                <span data-toggle="tooltip" data-placement="bottom" title="info">
+                                    <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                                        <i class="fas fa-info-circle"></i>
+                                    </button>
+                                </span>
+                                <span data-toggle="tooltip" data-placement="bottom" title="delete">
+                                    <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                                        <i class="far fa-trash-alt"></i>
+                                    </button>
+                                </span>
+                            </td>
+                        </tr>
+                    }
                 }
-
+               
 
             </tbody>
         </table>
